--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "dotenv": "^16.5.0",
     "node-fetch": "^3.3.2",
-    "telegraf": "^4.12.2"
+    "telegraf": "^4.12.2",
+    "express": "^4.18.2"
   }
 }
